스프링 JSON 연습

--- a/spring/demo/src/main/resources/templates/30th/product/main.html
+++ b/spring/demo/src/main/resources/templates/30th/product/main.html
@@ -10,7 +10,7 @@
 <h5>보유 게임 종류</h5>
 <p th:text="${kindOfGame}"></p>
 <p th:text="${price}"></p>
-<form th:action="@{/30th/product/todayGame}" method="post">
+<form th:action="@{/30th/today}" method="post">
     <input type="submit" value="오늘의 추천 게임">
 </form>
 </body>
