--- a/spring/demo/src/main/resources/templates/bank10/product/list.html
+++ b/spring/demo/src/main/resources/templates/bank10/product/list.html
@@ -7,7 +7,7 @@
 <body>
 
 <h2> 상품 리스트 </h2>
-<!--<a th:href="@{/32th/board/register}">글쓰기</a> -->
+<a th:href="@{/bank10/product/register}">글쓰기</a>
 
 <table border="1">
     <!-- tr = 가로 (행) -->
@@ -24,13 +24,16 @@
         </td>
     </tr>
     <tr th:each="product : ${list}">
-        <td align="center" th:text="${product.boardNo}">
-            ${product.boardNo}
+        <td align="center" th:text="${product.productNo}">
         </td>
         <td align="left" th:text="${product.name}">
         </td>
         <td align="right" th:text="${product.price}">
-            ${product.price}
+        </td>
+        <td>
+            <a th:href="@{|/bank10/product/detail?productNo=${product.productNo}|}">
+                상세보기
+            </a>
         </td>
     </tr>
 </table>
