--- a/spring/demo/src/main/resources/templates/bank10/product/register.html
+++ b/spring/demo/src/main/resources/templates/bank10/product/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/css/productBoard.css">
 </head>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script>
