게시판 css추가2

--- a/spring/demo/src/main/resources/templates/bank10/product/list.html
+++ b/spring/demo/src/main/resources/templates/bank10/product/list.html
@@ -9,8 +9,7 @@
 
 <h2> 상품 리스트 </h2>
 <a th:href="@{/bank10/product/register}">글쓰기</a>
-
-<table border="1">
+<table border="2", color="gray">
     <!-- tr = 가로 (행) -->
     <tr>
         <th align="center" width="80">번호</th>
