--- a/spring/demo/src/main/resources/static/css/productBoard.css
+++ b/spring/demo/src/main/resources/static/css/productBoard.css
@@ -1,3 +1,4 @@
+
 h2 {
     text-align: center;
     width: 550px;
@@ -9,4 +10,14 @@ h2 {
 }
 th, td {
     padding : 15px;
+}
+table {
+    margin-top: 10px;
+}
+form {
+    margin-bottom: 20px;
+}
+a:hover {
+    color: crimson;
+    font-weight: bold;
 }
